Added current TW images
... and removed originals.

--- a/Web/index.html
+++ b/Web/index.html
@@ -2,15 +2,34 @@
 <head><title>VRChat Remote Image Loading Assets</title></head>
 <body>
     <a href="captions.csv">Image Captions</a>
-    <img src="1.jpg" />
-    <img src="2.jpg" />
-    <img src="3.jpg" />
-    <img src="4.jpg" />
-    <img src="5.jpg" />
-    <img src="6.jpg" />
-    <img src="7.jpg" />
-    <img src="8.jpg" />
-    <img src="9.jpg" />
-    <img src="10.jpg" />
+    <img src="bafkreihsz6wzfhnpht3l7ugfwg7znqpabjous3u5batlaetfrayvcwuhdi.jpg" />
+    <img src="F8Ky7k9b0AAzgdk.jpg" />
+    <img src="Fp_Cnf_acAAxaqp.jpg" />
+    <img src="Fp_CnfcaYAA_hjA.jpg" />
+    <img src="Fp_CngSacAED9rB.jpg" />
+    <img src="FpV8eUMWIAEpwGQ.jpg" />
+    <img src="FpvpiJVaMAA-Ib1.jpg" />
+    <img src="Fq84lUeaYAEnTIi.jpg" />
+    <img src="FqdyM_WWAAIKepl.jpg" />
+    <img src="FrhLE74aEAA2A3F.jpg" />
+    <img src="FuYtscZWcAMBYBw.png />
+    <img src="FxgYvdeWIAMNCl6.jpg />
+    <img src="FyojI2hXoAAAIs3.jpg />
+    <img src="FzfA3zMXgAACXh5.jpg />
+    <img src="i6gyhyhb.bmp />
+    <img src="photo_2021-01-28_16-13-23.png />
+    <img src="photo_2021-04-07_01-22-20.png />
+    <img src="skbiysot.png />
+    <img src="VRChat_1920x1080_2021-01-14_22-15-33.256.png />
+    <img src="VRChat_1920x1080_2021-01-15_22-24-09.915.png />
+    <img src="VRChat_1920x1080_2021-01-15_22-59-41.572.png />
+    <img src="VRChat_1920x1080_2021-01-16_00-56-27.609.png />
+    <img src="VRChat_1920x1080_2021-01-16_00-57-41.427.png />
+    <img src="VRChat_1920x1080_2021-01-28_14-45-13.png />
+    <img src="VRChat_1920x1080_2021-04-04_21-47-44.967.png />
+    <img src="VRChat_1920x1080_2021-04-04_22-27-56.757.png />
+    <img src="VRChat_1920x1080_2021-04-05_03-23-36.138.png />
+    <img src="VRChat_2023-03-24_01-02-27.573_1920x1080.png />
+    <img src="wolfdad vibes.mp4_snapshot_00.38.033.jpg />
 </body>
 </html>
